# issa

./: .gitignore  README.md
docs/: tech-review.md
experiments/qwen3-vl/: DVC43313-10m-qwen3vl-32b.md  DVC43313-10m-qwen3vl-4b.md  DVC43313-10m-qwen3vl-8b.md  DVC43313-20m-qwen3vl-32b.md  DVC43313-20m-qwen3vl-8b.md  DVC43313-35m-qwen3vl-32b-outer-separators.md  DVC43313-35m-qwen3vl-32b.md  DVC43313-srt-10m-qwen3vl-32b-places.md  DVC43313-srt-10m-qwen3vl-32b-transcribe.md  DVC43313-srt-35m-qwen3vl-32b.md  qwen3.py  requirements.txt  separators.md
experiments/qwen3x/: README.md  alloc_vram.py  evaluations.csv  evaluations.txt  experiments.md  research.md  results.html  segments.py  settings.py  show_evaluations.py  utils.py  vqa.py
prototypes/audio-describe/: README.md  environment.yml
prototypes/segment/: sync.sh  (+5 more)
prototypes/segment/etl/: .env.example  main.py  pyproject.toml
prototypes/segment/etl/scripts/: all.sh  prepare.sh  segment.sh
prototypes/segment/etl/src/components/: aligning.py  audio_extraction.py  frame_captioning.py  frame_extraction.py  metadata.py  segmentation.py  utils.py
prototypes/segment/etl/tests/: test_api_support.py  test_e2e.py  test_integration.py  test_main.py
prototypes/segment/etl/tests/components/: test_aligning.py  test_audio_extraction.py  test_frame_captioning.py  test_frame_extraction.py  test_metadata.py  test_segmentation.py  test_utils.py
prototypes/segment/etl/tests/fixtures/: aligned_data.json  boundaries.json  merged_segments.json  tiny_sample.md
prototypes/segment/etl/tests/fixtures/prompts/: boundary_detection.md
(+71 files in other folders)
