[project]
name = "segment"
version = "0.1.0"
description = "Semantic video segmentation using generative vision-language models and LLM reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface>=0.0.1",
    "huggingface-hub[cli]>=0.36.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
    "openai>=2.9.0",
    "python-dotenv>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools.packages.find]
where = ["src"]
